--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -82,210 +82,152 @@
 
     <!-- Title -->
     <div class="title">{{ entry.title }}</div>
-    <!-- Author -->
-    <div class="author">
-      {% assign author_array_size = entry.author_array | size %}
+    <!-- Author and journal info with abstract button -->
+    <div class="author-journal-container">
+      <div class="author-journal-info">
+        <!-- Author -->
+        <div class="author">
+          {% assign author_array_size = entry.author_array | size %}
 
-      {% assign author_array_limit = author_array_size %}
-      {% if site.max_author_limit and author_array_size > site.max_author_limit %}
-        {% assign author_array_limit = site.max_author_limit %}
-      {% endif %}
-
-      {%- for author in entry.author_array limit: author_array_limit -%}
-        {% assign author_is_self = false %}
-        {%- assign author_last_name = author.last | regex_replace: '[*∗†‡§¶‖&^]', '' -%}
-        {%- assign author_last_html = author.last | regex_replace: '([*∗†‡§¶‖&^]+)', '<sup>\1</sup>' -%}
-        {% if site.scholar.last_name contains author_last_name %}
-          {% if site.scholar.first_name contains author.first %}
-            {% assign author_is_self = true %}
+          {% assign author_array_limit = author_array_size %}
+          {% if site.max_author_limit and author_array_size > site.max_author_limit %}
+            {% assign author_array_limit = site.max_author_limit %}
           {% endif %}
-        {%- endif -%}
-        {% assign coauthor_url = null %}
-        {%- assign clean_last_name = author_last_name | downcase | remove_accents -%}
-        {% if site.data.coauthors[clean_last_name] %}
-          {%- for coauthor in site.data.coauthors[clean_last_name] -%}
-            {% if coauthor.firstname contains author.first %}
-              {%- assign coauthor_url = coauthor.url -%}
-              {% break %}
+
+          {%- for author in entry.author_array limit: author_array_limit -%}
+            {% assign author_is_self = false %}
+            {%- assign author_last_name = author.last | regex_replace: '[*∗†‡§¶‖&^]', '' -%}
+            {%- assign author_last_html = author.last | regex_replace: '([*∗†‡§¶‖&^]+)', '<sup>\1</sup>' -%}
+            {% if site.scholar.last_name contains author_last_name %}
+              {% if site.scholar.first_name contains author.first %}
+                {% assign author_is_self = true %}
+              {% endif %}
+            {%- endif -%}
+            {% assign coauthor_url = null %}
+            {%- assign clean_last_name = author_last_name | downcase | remove_accents -%}
+            {% if site.data.coauthors[clean_last_name] %}
+              {%- for coauthor in site.data.coauthors[clean_last_name] -%}
+                {% if coauthor.firstname contains author.first %}
+                  {%- assign coauthor_url = coauthor.url -%}
+                  {% break %}
+                {%- endif -%}
+              {% endfor %}
+            {%- endif -%}
+
+            {%- if forloop.length > 1 -%}
+              {% if forloop.first == false -%}
+                {%- if forloop.length > 2 %}, {% elsif forloop.length == 2 %}  {% endif %}
+              {%- endif %}
+              {%- if forloop.last and author_array_limit == author_array_size %}and {% endif -%}
+            {% endif %}
+            {%- if author_is_self -%}
+              <em>
+                {{- author.first }}
+                {{ author_last_html -}}
+              </em>
+            {%- else -%}
+              {%- if coauthor_url -%}
+                <a href="{{ coauthor_url }}">
+                  {{- author.first }}
+                  {{ author_last_html -}}
+                </a>
+              {%- else -%}
+                {{- author.first }}
+                {{ author_last_html -}}
+              {% endif %}
             {%- endif -%}
           {% endfor %}
-        {%- endif -%}
+          {%- assign more_authors = author_array_size | minus: author_array_limit -%}
 
-        {%- if forloop.length > 1 -%}
-          {% if forloop.first == false -%}
-            {%- if forloop.length > 2 %}, {% elsif forloop.length == 2 %}  {% endif %}
-          {%- endif %}
-          {%- if forloop.last and author_array_limit == author_array_size %}and {% endif -%}
-        {% endif %}
-        {%- if author_is_self -%}
-          <em>
-            {{- author.first }}
-            {{ author_last_html -}}
-          </em>
-        {%- else -%}
-          {%- if coauthor_url -%}
-            <a href="{{ coauthor_url }}">
-              {{- author.first }}
-              {{ author_last_html -}}
-            </a>
-          {%- else -%}
-            {{- author.first }}
-            {{ author_last_html -}}
+          {%- assign more_authors_hide = more_authors | append: ' more author' -%}
+          {% if more_authors > 0 %}
+            {%- if more_authors > 1 -%}
+              {% assign more_authors_hide = more_authors_hide | append: 's' %}
+            {%- endif -%}
+            {% assign more_authors_show = '' %}
+            {%- for author in entry.author_array offset: author_array_limit -%}
+              {% assign more_authors_show = more_authors_show | append: author.first | append: ' ' | append: author.last %}
+              {% unless forloop.last %}
+                {% assign more_authors_show = more_authors_show | append: ', ' %}
+              {% endunless %}
+            {%- endfor -%}
+            {%- assign more_authors_show = more_authors_show | regex_replace: '([*∗†‡§¶‖&^]+)', '<sup>\1</sup>' -%}
+            , and
+            <span
+              class="more-authors"
+              title="click to view {{ more_authors_hide }}"
+              onclick="
+                  var element = $(this);
+                  element.attr('title', '');
+                  var more_authors_text = element.text() == '{{ more_authors_hide }}' ? '{{ more_authors_show }}' : '{{ more_authors_hide }}';
+                  var cursorPosition = 0;
+                  var textAdder = setInterval(function(){
+                    element.html(more_authors_text.substring(0, cursorPosition + 1));
+                    if (++cursorPosition == more_authors_text.length){
+                      clearInterval(textAdder);
+                    }
+                }, '{{ site.more_authors_animation_delay }}');
+              "
+            >
+              {{- more_authors_hide -}}
+            </span>
           {% endif %}
-        {%- endif -%}
-      {% endfor %}
-      {%- assign more_authors = author_array_size | minus: author_array_limit -%}
+          {% if entry.annotation %}
+            <i
+              class="fa-solid fa-circle-info ml-1"
+              data-toggle="popover"
+              data-placement="top"
+              data-html="true"
+              data-content="{{ entry.annotation | escape }}"
+            >
+            </i>
+          {% endif %}
+        </div>
 
-      {%- assign more_authors_hide = more_authors | append: ' more author' -%}
-      {% if more_authors > 0 %}
-        {%- if more_authors > 1 -%}
-          {% assign more_authors_hide = more_authors_hide | append: 's' %}
-        {%- endif -%}
-        {% assign more_authors_show = '' %}
-        {%- for author in entry.author_array offset: author_array_limit -%}
-          {% assign more_authors_show = more_authors_show | append: author.first | append: ' ' | append: author.last %}
-          {% unless forloop.last %}
-            {% assign more_authors_show = more_authors_show | append: ', ' %}
-          {% endunless %}
-        {%- endfor -%}
-        {%- assign more_authors_show = more_authors_show | regex_replace: '([*∗†‡§¶‖&^]+)', '<sup>\1</sup>' -%}
-        , and
-        <span
-          class="more-authors"
-          title="click to view {{ more_authors_hide }}"
-          onclick="
-              var element = $(this);
-              element.attr('title', '');
-              var more_authors_text = element.text() == '{{ more_authors_hide }}' ? '{{ more_authors_show }}' : '{{ more_authors_hide }}';
-              var cursorPosition = 0;
-              var textAdder = setInterval(function(){
-                element.html(more_authors_text.substring(0, cursorPosition + 1));
-                if (++cursorPosition == more_authors_text.length){
-                  clearInterval(textAdder);
-                }
-            }, '{{ site.more_authors_animation_delay }}');
-          "
-        >
-          {{- more_authors_hide -}}
-        </span>
-      {% endif %}
-      {% if entry.annotation %}
-        <i
-          class="fa-solid fa-circle-info ml-1"
-          data-toggle="popover"
-          data-placement="top"
-          data-html="true"
-          data-content="{{ entry.annotation | escape }}"
-        >
-        </i>
-      {% endif %}
-    </div>
+        <!-- Journal/Book title and date -->
+        {% assign proceedings = 'inproceedings,incollection' | split: ',' %}
+        {% assign thesis = 'thesis,mastersthesis,phdthesis' | split: ',' %}
+        {% if entry.type == 'article' %}
+          {% capture entrytype %}<em>{{ entry.journal }}</em>{% endcapture %}
+        {% elsif proceedings contains entry.type %}
+          {% capture entrytype %}<em>In {{ entry.booktitle }}</em>{% endcapture %}
+        {% elsif thesis contains entry.type %}
+          {% capture entrytype %}<em>{{ entry.school }}</em>{% endcapture %}
+        {% else %}
+          {% capture entrytype %}{% endcapture %}
+        {% endif %}
+        {% if entry.month %}
+          {% capture entrymonth %}{{ " " }}{{ entry.month | capitalize }}{% endcapture %}
+        {% endif %}
+        {% if entry.year %}
+          {% capture entryyear %}{{ " " }}{{ entry.year }}{% endcapture %}
+        {% endif %}
+        {% if entry.location %}
+          {% capture entrytype %}{{ entrytype }}{{ ", " }}{{ entry.location }}{% endcapture %}
+        {% endif -%}
+        {% if entry.additional_info %}
+          {% capture entrytype %}{{ entrytype }}{{ entry.additional_info | markdownify | remove: '<p>' | remove: '</p>' }}{% endcapture %}
+        {% endif %}
+        {% capture hook_exists %}{% file_exists _includes/hook/bib.liquid %}{% endcapture %}
+        {% if hook_exists == 'true' %}
+          {% include hook/bib.liquid %}
+        {% endif %}
+        {% assign entrytype_text = entrytype | strip_html | strip %}
+        {% capture periodical %}{{ entrytype }}{% if entrytype_text != "" and entryyear != "" %}, {% endif %}{{ entrymonth }}{{ entryyear }}{% endcapture %}
+        <div class="periodical">
+          {{ periodical | strip }}
+        </div>
+        <div class="periodical">
+          {{ entry.note | strip }}
+        </div>
+      </div>
 
-    <!-- Journal/Book title and date -->
-    {% assign proceedings = 'inproceedings,incollection' | split: ',' %}
-    {% assign thesis = 'thesis,mastersthesis,phdthesis' | split: ',' %}
-    {% if entry.type == 'article' %}
-      {% capture entrytype %}<em>{{ entry.journal }}</em>{% endcapture %}
-    {% elsif proceedings contains entry.type %}
-      {% capture entrytype %}<em>In {{ entry.booktitle }}</em>{% endcapture %}
-    {% elsif thesis contains entry.type %}
-      {% capture entrytype %}<em>{{ entry.school }}</em>{% endcapture %}
-    {% else %}
-      {% capture entrytype %}{% endcapture %}
-    {% endif %}
-    {% if entry.month %}
-      {% capture entrymonth %}{{ " " }}{{ entry.month | capitalize }}{% endcapture %}
-    {% endif %}
-    {% if entry.year %}
-      {% capture entryyear %}{{ " " }}{{ entry.year }}{% endcapture %}
-    {% endif %}
-    {% if entry.location %}
-      {% capture entrytype %}{{ entrytype }}{{ ", " }}{{ entry.location }}{% endcapture %}
-    {% endif -%}
-    {% if entry.additional_info %}
-      {% capture entrytype %}{{ entrytype }}{{ entry.additional_info | markdownify | remove: '<p>' | remove: '</p>' }}{% endcapture %}
-    {% endif %}
-    {% capture hook_exists %}{% file_exists _includes/hook/bib.liquid %}{% endcapture %}
-    {% if hook_exists == 'true' %}
-      {% include hook/bib.liquid %}
-    {% endif %}
-    {% assign entrytype_text = entrytype | strip_html | strip %}
-    {% capture periodical %}{{ entrytype }}{% if entrytype_text != "" and entryyear != "" %}, {% endif %}{{ entrymonth }}{{ entryyear }}{% endcapture %}
-    <div class="periodical">
-      {{ periodical | strip }}
-    </div>
-    <div class="periodical">
-      {{ entry.note | strip }}
-    </div>
-
-    <!-- Links/Buttons -->
-    <div class="links">
-      {% if entry.award %}
-        <a class="award btn btn-sm z-depth-0" role="button">
-          {%- if entry.award_name %}{{ entry.award_name }}{% else %}Awarded{% endif -%}
-        </a>
-      {% endif %}
-      {% if entry.abstract %}
-        <a class="abstract btn btn-sm z-depth-0" role="button">Abs</a>
-      {% endif %}
-      {% if entry.doi %}
-        <a href="https://doi.org/{{ entry.doi }}" class="btn btn-sm z-depth-0" role="button">DOI</a>
-      {% endif %}
-      {% if entry.arxiv %}
-        <a href="http://arxiv.org/abs/{{ entry.arxiv }}" class="btn btn-sm z-depth-0" role="button">arXiv</a>
-      {% endif %}
-      {% if entry.bibtex_show %}
-        <a class="bibtex btn btn-sm z-depth-0" role="button">Bib</a>
-      {% endif %}
-      {% if entry.html %}
-        {% if entry.html contains '://' %}
-          <a href="{{ entry.html }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
-        {% else %}
-          <a href="{{ entry.html | prepend: '/assets/html/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">HTML</a>
+      <!-- Abstract button on the right -->
+      <div class="abstract-button-container">
+        {% if entry.abstract %}
+          <a class="abstract btn btn-sm z-depth-0" role="button">Abs</a>
         {% endif %}
-      {% endif %}
-      {% if entry.pdf %}
-        {% if entry.pdf contains '://' %}
-          <a href="{{ entry.pdf }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
-        {% else %}
-          <a href="{{ entry.pdf | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">PDF</a>
-        {% endif %}
-      {% endif %}
-      {% if entry.supp %}
-        {% if entry.supp contains '://' %}
-          <a href="{{ entry.supp }}" class="btn btn-sm z-depth-0" role="button">Supp</a>
-        {% else %}
-          <a href="{{ entry.supp | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Supp</a>
-        {% endif %}
-      {% endif %}
-      {% if entry.video and site.enable_video_embedding %}
-        <a class="abstract btn btn-sm z-depth-0" role="button">Video</a>
-      {% elsif entry.video %}
-        <a href="{{ entry.video }}" class="btn btn-sm z-depth-0" role="button">Video</a>
-      {% endif %}
-      {% if entry.blog %}
-        <a href="{{ entry.blog }}" class="btn btn-sm z-depth-0" role="button">Blog</a>
-      {% endif %}
-      {% if entry.code %}
-        <a href="{{ entry.code }}" class="btn btn-sm z-depth-0" role="button">Code</a>
-      {% endif %}
-      {% if entry.poster %}
-        {% if entry.poster contains '://' %}
-          <a href="{{ entry.poster }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
-        {% else %}
-          <a href="{{ entry.poster | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Poster</a>
-        {% endif %}
-      {% endif %}
-      {% if entry.slides %}
-        {% if entry.slides contains '://' %}
-          <a href="{{ entry.slides }}" class="btn btn-sm z-depth-0" role="button">Slides</a>
-        {% else %}
-          <a href="{{ entry.slides | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Slides</a>
-        {% endif %}
-      {% endif %}
-      {% if entry.website %}
-        <a href="{{ entry.website }}" class="btn btn-sm z-depth-0" role="button">Website</a>
-      {% endif %}
+      </div>
     </div>
     {% if site.enable_publication_badges %}
       {% assign entry_has_altmetric_badge = false %}
