--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -790,6 +790,7 @@ footer.sticky-bottom {
           width: 100%;
           height: 100%;
           object-fit: cover;
+          object-position: center;
           transition: opacity 0.3s ease;
           display: block;
         }
