--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -69,9 +69,9 @@ layout: default
       <h2>
         <a href="{{ '/visualizations/' | relative_url }}" style="color: inherit">Selected Visualizations</a>
       </h2>
-      <li>
-         One of my passions as a scientific is to create interactive visualizations to explore the connection between bonding and quantum mechanics. Please enjoy the visualizations below by clicked 'Launch' for the interactive version and click 'Expanasion' for a beginner friendly background to what is displayed.
-      </li> 
+      <p>
+         One of my passions as a scientist is to create interactive visualizations to explore the connection between bonding and quantum mechanics. Please enjoy the visualizations below by clicking <strong>'Launch Interactive'</strong> for the interactive version and <strong>'View Explanation'</strong> for a beginner friendly background to what is displayed.
+      </p> 
       {% include selected_visualizations.liquid %}
     {% endif %}
 
