--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -813,25 +813,25 @@ footer.sticky-bottom {
     justify-content: center;
     font-size: 0.9em;
     border: none;
-    background: rgba(0, 0, 0, 0);
+    background: transparent;
 
     &.interactive-link {
       background-color: var(--global-theme-color);
-      color: rgba(0, 0, 0, 0);
+      color: var(--global-bg-color);
 
       &:hover {
-        background-color: rgba(0, 0, 0, 0);
+        background-color: var(--global-bg-color);
         color: var(--global-theme-color);
       }
     }
 
     &.explanation-link {
-      background-color: rgba(0, 0, 0, 0);
+      background-color: var(--global-bg-color);
       color: var(--global-theme-color);
 
       &:hover {
         background-color: var(--global-theme-color);
-        color: rgba(0, 0, 0, 0);
+        color: var(--global-bg-color);
       }
     }
   }
@@ -968,7 +968,8 @@ footer.sticky-bottom {
           left: 0;
           width: 100%;
           height: 100%;
-          background: rgba(255, 255, 255, 0.75);
+          background-color: var(--global-bg-color);
+          opacity: 0.75;
           display: flex;
           justify-content: center;
           align-items: center;
