--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -822,6 +822,7 @@ footer.sticky-bottom {
       &:hover {
         background-color: var(--global-bg-color);
         color: var(--global-theme-color);
+        border: 2px solid var(--global-theme-color);
       }
     }
 
@@ -832,6 +833,7 @@ footer.sticky-bottom {
       &:hover {
         background-color: var(--global-theme-color);
         color: var(--global-bg-color);
+        border: 2px solid var(--global-bg-color);
       }
     }
   }
@@ -968,8 +970,7 @@ footer.sticky-bottom {
           left: 0;
           width: 100%;
           height: 100%;
-          background-color: var(--global-bg-color);
-          opacity: 0.75;
+          background-color: var(--global-card-bg-color);
           display: flex;
           justify-content: center;
           align-items: center;
