--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -822,7 +822,8 @@ footer.sticky-bottom {
       &:hover {
         background-color: var(--global-bg-color);
         color: var(--global-theme-color);
-        border: 2px solid var(--global-theme-color);
+        border-bottom: 2px solid var(--global-theme-color);
+        border-right: 2px solid var(--global-theme-color);
       }
     }
 
@@ -833,7 +834,8 @@ footer.sticky-bottom {
       &:hover {
         background-color: var(--global-theme-color);
         color: var(--global-bg-color);
-        border: 2px solid var(--global-bg-color);
+        border-bottom: 2px solid var(--global-bg-color);
+        border-left: 2px solid var(--global-bg-color);
       }
     }
   }
@@ -996,7 +998,7 @@ footer.sticky-bottom {
         }
 
         &:hover .title-overlay {
-          opacity: 1;
+          opacity: 0.85;
           pointer-events: auto;
         }
 
