--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -822,8 +822,8 @@ footer.sticky-bottom {
       &:hover {
         background-color: var(--global-bg-color);
         color: var(--global-theme-color);
-        border-bottom: 2px solid var(--global-theme-color);
-        border-right: 2px solid var(--global-theme-color);
+        border-bottom: 5px solid var(--global-theme-color);
+        border-right: 5px solid var(--global-theme-color);
       }
     }
 
@@ -834,8 +834,8 @@ footer.sticky-bottom {
       &:hover {
         background-color: var(--global-theme-color);
         color: var(--global-bg-color);
-        border-bottom: 2px solid var(--global-bg-color);
-        border-left: 2px solid var(--global-bg-color);
+        border-bottom: 5px solid var(--global-bg-color);
+        border-left: 5px solid var(--global-bg-color);
       }
     }
   }
@@ -998,12 +998,12 @@ footer.sticky-bottom {
         }
 
         &:hover .title-overlay {
-          opacity: 0.85;
+          opacity: 0.6;
           pointer-events: auto;
         }
 
         &:hover .preview {
-          opacity: 0.3;
+          opacity: 0.;
         }
       }
 
