--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1003,7 +1003,7 @@ footer.sticky-bottom {
         }
 
         &:hover .preview {
-          opacity: 0.;
+          opacity: 0.0;
         }
       }
 
