--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -974,7 +974,7 @@ footer.sticky-bottom {
           left: 0;
           width: 100%;
           height: 100%;
-          background-color: var(--global-card-bg-color);
+          background: rgba(255, 255, 255, 0.7);
           display: flex;
           justify-content: center;
           align-items: center;
@@ -1000,7 +1000,7 @@ footer.sticky-bottom {
         }
 
         &:hover .title-overlay {
-          opacity: 0.95;
+          opacity: 1;
           pointer-events: auto;
         }
 
