--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -70,7 +70,7 @@ layout: default
         <a href="{{ '/visualizations/' | relative_url }}" style="color: inherit">Selected Visualizations</a>
       </h2>
       <p>
-         One of my passions is to create interactive visualizations to explore the connection between bonding and quantum mechanics. Please enjoy the visualizations below by clicking <strong>'Launch Interactive'</strong> for the interactive version and <strong>'View Explanation'</strong> for a beginner friendly background to what is displayed.
+         One of my passions is to create interactive visualizations that explore the connection between bonding and quantum mechanics. Please enjoy the visualizations below by clicking <strong>Launch Interactive</strong> for the interactive version and <strong>View Explanation</strong> for a beginner friendly background to what is displayed.
       </p> 
       {% include selected_visualizations.liquid %}
     {% endif %}
